# ctcv_gazebo

./: CMakeLists.txt  README.md  package.xml
config_files/: costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  move_base_and_local_planner_params.yaml  robot_initial_pose_ctcv_map.xml  rviz_config.rviz
launch/: ctcv.launch  robot.launch
meshes/: ctcv.STL  ctcv.dae  stopy.stl  stopy_chull.stl  stopy_decimated.stl
urdf/: stopy.urdf
worlds/: ctcv.world
